split styles into components

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Range Slider Demo</title>
     <link rel="stylesheet" href="./demo.css" />
-    <link rel="stylesheet" href="../src/styles/style.scss" />
+    <link rel="stylesheet" href="../src/styles/styles.scss" />
   </head>
   <body>
     <div class="container">
