Add default theme
Removed component mixins in favour of simple scss files.

Mixins are not flexible.
Each theme has a unique set of parameters.
It is better to take a default theme and customize it to my needs.

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -6,11 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Range Slider Demo</title>
     <link rel="stylesheet" href="./demo.css" />
-    <link rel="stylesheet" href="../src/styles/styles.scss" />
+    <link rel="stylesheet" href="../src/styles/default.scss" />
   </head>
   <body>
     <div class="container">
-      <div class="range-slider-demo"></div>
+      <div id="range-slider-horizontal"></div>
+    </div>
+    <div class="container">
+      <div id="range-slider-vertical"></div>
     </div>
     <script type="text/javascript" src="./demo.ts"></script>
   </body>
