Fix range slider width & height
Range slider container respect its children dimensions

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Range Slider Demo</title>
-    <link rel="stylesheet" href="./demo.css" />
+    <link rel="stylesheet" href="./demo.scss" />
     <link rel="stylesheet" href="../src/styles/style.scss" />
   </head>
   <body>
-    <div class="container">
-      <div id="range-slider-horizontal"></div>
+    <div class="example">
+      <input type="text" id="range-slider-horizontal" />
     </div>
-    <div class="container">
-      <div id="range-slider-vertical"></div>
+    <div class="example example_vertical">
+      <input type="text" id="range-slider-vertical" />
     </div>
     <script type="text/javascript" src="./demo.ts"></script>
   </body>
