--- a/demo/demo.html
+++ b/demo/demo.html
@@ -9,11 +9,21 @@
     <link rel="stylesheet" href="../src/styles/style.scss" />
   </head>
   <body>
-    <div class="example">
-      <input type="text" id="range-slider-horizontal" />
-    </div>
-    <div class="example example_vertical">
-      <input type="text" id="range-slider-vertical" />
+    <div class="example" id="example-1">
+      <div class="config-panel"></div>
+      <div class="rs-panel">
+        <div class="rs-panel__result">
+          <label>
+            Result:
+            <input
+              type="text"
+              class="rs-panel__result-input"
+              id="rs-1-result"
+            />
+          </label>
+        </div>
+        <input type="range" id="rs-1" />
+      </div>
     </div>
     <script type="text/javascript" src="./demo.ts"></script>
   </body>
